--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -124,32 +124,8 @@ jobs:
         uses: ./.github/workflows/free-thread-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test:
+    tpc-h-test:
         uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test-no-optimizer:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            close-optimizer: "true"
-    tpc-h-regression-test-vectordb:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 360
-    tpc-h-regression-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["VectorDB"]'
-            close-optimizer: "true"
-            timeout-minutes: 360
     analyze-required-test-check:
         if: always()
         needs: # List of jobs that must pass. Add more jobs if needed.
@@ -167,10 +143,7 @@ jobs:
             - remote-test
             - assembly-test
             - free-thread-test
-            - tpc-h-regression-test
-            - tpc-h-regression-test-no-optimizer
-            - tpc-h-regression-test-vectordb
-            - tpc-h-regression-test-no-optimizer-vectordb
+            - tpc-h-test
             - standalone-test-no-mac-relational
             - standalone-test-no-optimizer-no-mac-relational
             - db-ce-no-mac-relational
