--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,26 +11,8 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    db-ce:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["windows-latest"]'
-    db-ce-no-optimizer:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            close-optimizer: "true"
-            os-matrix: '["windows-latest"]'
     standalone-test-no-mac-relational:
         uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["windows-latest"]'
-            db-matrix: '["Dameng", "Oracle"]'
-            timeout-minutes: 100
-    standalone-test-no-optimizer-no-mac-relational:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
         with:
             metadata-matrix: '["zookeeper"]'
             os-matrix: '["windows-latest"]'
@@ -44,40 +26,16 @@ jobs:
             db-matrix: '["Dameng"]'
             db-support-create-database: false
             timeout-minutes: 120
-    standalone-test-no-optimizer-no-mac-no-privs-relational:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng"]'
-            db-support-create-database: false
-            timeout-minutes: 100
     db-ce-no-mac-relational:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
             os-matrix: '["windows-latest"]'
             db-matrix: '["Dameng", "Oracle"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+            functest: "UDFIT#windowsRelationalTest"
             timeout-minutes: 120
-    db-ce-no-optimizer-no-mac-relational:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["windows-latest"]'
-            db-matrix: '["Dameng", "Oracle"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 120
-            close-optimizer: "true"
     standalone-test-vectordb:
         uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
-    standalone-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
         with:
             metadata-matrix: '["zookeeper"]'
             os-matrix: '["windows-latest"]'
@@ -89,7 +47,7 @@ jobs:
             metadata-matrix: '["zookeeper"]'
             os-matrix: '["windows-latest"]'
             db-matrix: '["VectorDB"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+            functest: "UDFIT#windowsRelationalTest"
             timeout-minutes: 360
     db-ce-no-optimizer-vectordb:
         uses: ./.github/workflows/DB-CE.yml
@@ -97,6 +55,6 @@ jobs:
             metadata-matrix: '["zookeeper"]'
             os-matrix: '["windows-latest"]'
             db-matrix: '["VectorDB"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+            functest: "UDFIT#windowsRelationalTest"
             timeout-minutes: 360
             close-optimizer: "true"
