--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,25 +19,27 @@ jobs:
 #        uses: ./.github/workflows/case-regression.yml
 #        with:
 #            metadata-matrix: '["zookeeper"]'
-    standalone-test:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["InfluxDB"]'
-    standalone-test-no-optimizer:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["InfluxDB"]'
+#    standalone-test:
+#        uses: ./.github/workflows/standalone-test.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            db-matrix: '["InfluxDB"]'
+#    standalone-test-no-optimizer:
+#        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            db-matrix: '["InfluxDB"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            os-matrix: '["macos-latest"]'
             db-matrix: '["InfluxDB"]'
     db-ce-no-optimizer:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            os-matrix: '["macos-latest"]'
             db-matrix: '["InfluxDB"]'
             close-optimizer: "true"
 #    standalone-test-no-mac-relational:
@@ -128,19 +130,19 @@ jobs:
 #        uses: ./.github/workflows/free-thread-test.yml
 #        with:
 #            metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["InfluxDB"]'
-    tpc-h-regression-test-no-optimizer:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["InfluxDB"]'
-            close-optimizer: "true"
+#    tpc-h-regression-test:
+#        uses: ./.github/workflows/tpc-h.yml
+#        with:
+#            os-matrix: '["ubuntu-latest"]'
+#            metadata-matrix: '["zookeeper"]'
+#            db-matrix: '["InfluxDB"]'
+#    tpc-h-regression-test-no-optimizer:
+#        uses: ./.github/workflows/tpc-h.yml
+#        with:
+#            os-matrix: '["ubuntu-latest"]'
+#            metadata-matrix: '["zookeeper"]'
+#            db-matrix: '["InfluxDB"]'
+#            close-optimizer: "true"
 #    tpc-h-regression-test-vectordb:
 #        uses: ./.github/workflows/tpc-h.yml
 #        with:
