--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,35 +11,33 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    #    unit-test:
-    #        uses: ./.github/workflows/unit-test.yml
-    #    unit-mds:
-    #        uses: ./.github/workflows/unit-mds.yml
-    #    case-regression:
-    #        uses: ./.github/workflows/case-regression.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #    standalone-test:
-    #        uses: ./.github/workflows/standalone-test.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #            db-matrix: '["InfluxDB"]'
-    #    standalone-test-no-optimizer:
-    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #            db-matrix: '["InfluxDB"]'
+#    unit-test:
+#        uses: ./.github/workflows/unit-test.yml
+#    unit-mds:
+#        uses: ./.github/workflows/unit-mds.yml
+#    case-regression:
+#        uses: ./.github/workflows/case-regression.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+    standalone-test:
+        uses: ./.github/workflows/standalone-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["InfluxDB"]'
+    standalone-test-no-optimizer:
+        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["InfluxDB"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            os-matrix: '["macos-latest"]'
             db-matrix: '["InfluxDB"]'
     db-ce-no-optimizer:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            os-matrix: '["macos-latest"]'
             db-matrix: '["InfluxDB"]'
             close-optimizer: "true"
 #    standalone-test-no-mac-relational:
@@ -130,19 +128,19 @@ jobs:
 #        uses: ./.github/workflows/free-thread-test.yml
 #        with:
 #            metadata-matrix: '["zookeeper"]'
-#    tpc-h-regression-test:
-#        uses: ./.github/workflows/tpc-h.yml
-#        with:
-#            os-matrix: '["ubuntu-latest"]'
-#            metadata-matrix: '["zookeeper"]'
-#            db-matrix: '["InfluxDB"]'
-#    tpc-h-regression-test-no-optimizer:
-#        uses: ./.github/workflows/tpc-h.yml
-#        with:
-#            os-matrix: '["ubuntu-latest"]'
-#            metadata-matrix: '["zookeeper"]'
-#            db-matrix: '["InfluxDB"]'
-#            close-optimizer: "true"
+    tpc-h-regression-test:
+        uses: ./.github/workflows/tpc-h.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["InfluxDB"]'
+    tpc-h-regression-test-no-optimizer:
+        uses: ./.github/workflows/tpc-h.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["InfluxDB"]'
+            close-optimizer: "true"
 #    tpc-h-regression-test-vectordb:
 #        uses: ./.github/workflows/tpc-h.yml
 #        with:
