--- a/.github/actions/dbLog/action.yml
+++ b/.github/actions/dbLog/action.yml
@@ -45,6 +45,6 @@ runs:
           working-directory: ${{ github.workspace }}
           shell: wsl-bash {0}
           run: |
-              "${GITHUB_WORKSPACE}/.github/scripts/dataSources/log/oracle_windows.sh" oracle23-1521
-              "${GITHUB_WORKSPACE}/.github/scripts/dataSources/log/oracle_windows.sh" oracle23-1522
-              "${GITHUB_WORKSPACE}/.github/scripts/dataSources/log/oracle_windows.sh" oracle23-1523
+              ".github/scripts/dataSources/log/oracle_windows.sh" oracle23-1521
+              ".github/scripts/dataSources/log/oracle_windows.sh" oracle23-1522
+              ".github/scripts/dataSources/log/oracle_windows.sh" oracle23-1523
