feat(udf): udf timeout handler & dangerous module block (#594)
To use:
method 1:
set UDFTimeout={seconds} in config file.

method 2:
use iginx_timeout in sql:

select udf(s1, iginx_timeout=30) from data;
目前dangerous module指IGinX PyClient，避免无限循环调用，后续dangerous module可在代码层面扩展
用户手册已更新

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -242,6 +242,9 @@ pythonCMD=python3
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
 
+# seconds, -1代表不管理超时
+UDFTimeout=-1
+
 # UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
 # %defaultUDFDir%
 #   |- udf_list         (udf函数列表及元信息文件)
