--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -49,6 +49,10 @@ inputs:
         description: "whether the database supports create database"
         required: false
         default: "true"
+    if-TPC-H:
+        description: "whether the test is tpc-h"
+        required: false
+        default: "false"
 
 runs:
     using: "composite" # Mandatory parameter
@@ -196,6 +200,13 @@ runs:
           with:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
               statements: s/^#storageEngineList=127.0.0.1#6379/storageEngineList=127.0.0.1#6379/g
+
+        - if: inputs.DB-name == 'Redis' && inputs.if-TPC-H == 'true'
+          name: Add Redis Timeout for TPC-H
+          uses: ./.github/actions/edit
+          with:
+            paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
+            statements: s/^#timeout=20000#data_db=1/#timeout=40000#data_db=1/g
 
         - if: inputs.DB-name=='PostgreSQL'
           name: Change PostgreSQL Config
