--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -206,7 +206,7 @@ runs:
           uses: ./.github/actions/edit
           with:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
-              statements: s/^#timeout=20000#data_db=1/#timeout=40000#data_db=1/g
+              statements: s/#timeout=20000#data_db=1/#timeout=40000#data_db=1/g
 
         - if: inputs.DB-name=='PostgreSQL'
           name: Change PostgreSQL Config
