feat(metadata): adjust iginx start up (#607)
PR文档：【https://oxlh5mrwi0.feishu.cn/docx/QFbpdfzYGoxONOxUV8Pcip0Hncg?from=from_copylink 】

移除DefaultMetaManager.java中addOrUpdateSchemaMapping及相关不被调用的方法，以及test/src/test/java/cn/edu/tsinghua/iginx/integration/mds/IMetaManagerTest.java中的相关测试

所有测试可以通过，包括schema_prefix相关的内容

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -167,6 +167,8 @@ jobs:
             db-matrix: '["VectorDB"]'
             close-optimizer: "true"
             timeout-minutes: 360
+    cluster-test:
+        uses: ./.github/workflows/cluster-test.yml
     analyze-required-test-check:
         if: always()
         needs: # List of jobs that must pass. Add more jobs if needed.
@@ -194,6 +196,7 @@ jobs:
             - db-ce-no-optimizer-Dameng
             - db-ce-Oracle
             - db-ce-no-optimizer-Oracle
+            - cluster-test
         runs-on: ubuntu-latest
         steps:
             - name: Decide whether the needed jobs succeeded or failed
