--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -17,12 +17,12 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest"]'
+                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
                 required: false
-                default: '["zookeeper"]'
+                default: '["zookeeper", "etcd"]'
             db-matrix:
                 description: "The database to run the test on"
                 type: string
