ci: collect TPC-H results as csv (#618)
将 TPCH 的所有测试结果收集为单个 csv 文件，可以将在测试结束后，在 tests/tpc-h-test/TPC-H-Collect 的日志的 Upload Result 一节中找到下载连接，或者在 tests/tpc-h-test 的 Summary 页面找到可下载的文件，其中 tpch-costs 是汇总后的 csv 结果，其他是汇总前的结果。——注意，如果重跑了实验，不是TPC-H跑的轮次并没有相关的下载，只有对应的轮次才有artifacts下载【通过选择页面右上解的Attempts来切换】

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -141,32 +141,11 @@ jobs:
         uses: ./.github/workflows/free-thread-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test:
+    tpc-h-test:
         uses: ./.github/workflows/tpc-h.yml
         with:
             os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
-    tpc-h-regression-test-no-optimizer:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            close-optimizer: "true"
-    tpc-h-regression-test-vectordb:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 360
-    tpc-h-regression-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["VectorDB"]'
-            close-optimizer: "true"
-            timeout-minutes: 360
     cluster-test:
         uses: ./.github/workflows/cluster-test.yml
     analyze-required-test-check:
@@ -186,10 +165,7 @@ jobs:
             - remote-test
             - assembly-test
             - free-thread-test
-            - tpc-h-regression-test
-            - tpc-h-regression-test-no-optimizer
-            - tpc-h-regression-test-vectordb
-            - tpc-h-regression-test-no-optimizer-vectordb
+            - tpc-h-test
             - standalone-test-no-mac-relational
             - standalone-test-no-optimizer-no-mac-relational
             - db-ce-Dameng
