--- a/core/pom.xml
+++ b/core/pom.xml
@@ -209,6 +209,11 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava3</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>3.1.11</version>
+        </dependency>
     </dependencies>
 
     <build>
