--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>io.reactivex.rxjava3</groupId>
+                <artifactId>rxjava</artifactId>
+                <version>3.1.11</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
