feat(relational): support dameng and oracle use approximate boundary

--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -90,6 +90,10 @@ jdbc_support_special_char=false
 
 jdbc_support_get_table_name_from_result_set=false
 
+support_boundary_query=true
+
+use_approximate_boundary=true
+
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
