fix(relational): install Dameng JDBC driver from IGinX-resources (#635)
* fix(relational): replace the local download of the Dameng JDBC driver with a download from GitHub

* fix(relational): move install from dameng setup to dependence

* fix(relational): move install from dameng setup to dependence

* fix(relational): use maven-antrun-plugin to replace the manual install

* fix(relational): remove manual install

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -47,6 +47,26 @@
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>download-dameng-jdbc</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>initialize</phase>
+                                <configuration>
+                                    <target>
+                                        <mkdir dir="${project.build.directory}/lib"/>
+                                        <get dest="${project.build.directory}/lib/dameng-jdbc-1.8-SNAPSHOT.jar" src="https://raw.githubusercontent.com/IGinX-THU/IGinX-resources/main/resources/dameng-jdbc-1.8-SNAPSHOT.jar" verbose="true"/>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-install-plugin</artifactId>
                         <version>3.1.2</version>
                         <executions>
@@ -57,7 +77,7 @@
                                 </goals>
                                 <phase>generate-sources</phase>
                                 <configuration>
-                                    <file>src/main/resources/dameng-jdbc-1.8-SNAPSHOT.jar</file>
+                                    <file>${project.build.directory}/lib/dameng-jdbc-1.8-SNAPSHOT.jar</file>
                                 </configuration>
                             </execution>
                             <execution>
