--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -65,7 +65,7 @@ runs:
           run: |
               brew update
               brew install docker qemu
-              brew install colima
+              brew install colima@0.8.1
               LIMACTL_PATH=$(brew --prefix)/bin/limactl
               sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
               colima start --network-address --arch arm64 --vm-type=qemu
