ci: use default colima to run docker in macOS

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -58,17 +58,13 @@ runs:
               channel-priority: strict
               run-post: "false"
 
-        # we use a patched version of lima(slower) because colima cannot start on M1 chips and the docker task is lightweight.
         - if: runner.os == 'macOS' &&  inputs.docker-required=='true'
           name: Install Docker on MacOS
           shell: bash
           run: |
               brew update
-              brew install docker qemu
-              brew install colima@0.8.1
-              LIMACTL_PATH=$(brew --prefix)/bin/limactl
-              sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
-              colima start --network-address --arch arm64 --vm-type=qemu
+              brew install docker colima
+              colima start --network-address
               docker --version
 
         - if: inputs.scope=='all'
