--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -64,10 +64,11 @@ runs:
           shell: bash
           run: |
               brew update
-              brew install docker qemu
+              brew install docker qemu lima
               LIMACTL_PATH=$(brew --prefix)/bin/limactl
               COLIMA_PATH=$(brew --prefix)/bin/colima
-              sudo curl -L -o $COLIMA_PATH https://github.com/abiosoft/colima/releases/download/v0.8.1/colima-Darwin-arm64 && sudo chmod +x $COLIMA_PATH
+              sudo curl -LO https://github.com/abiosoft/colima/releases/latest/download/colima-Darwin-arm64
+              sudo install colima-Darwin-arm64 $COLIMA_PATH && sudo chmod +x $COLIMA_PATH
               sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
               colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
