ci: pin the version of Colima to 0.8.1

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -67,7 +67,7 @@ runs:
               brew install docker qemu lima
               LIMACTL_PATH=$(brew --prefix)/bin/limactl
               COLIMA_PATH=$(brew --prefix)/bin/colima
-              sudo curl -LO https://github.com/abiosoft/colima/releases/latest/download/colima-Darwin-arm64
+              sudo curl -LO https://github.com/abiosoft/colima/releases/download/v0.8.1/colima-Darwin-arm64
               sudo install colima-Darwin-arm64 $COLIMA_PATH && sudo chmod +x $COLIMA_PATH
               sudo curl -L -o $LIMACTL_PATH https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x $LIMACTL_PATH
               colima start --network-address --arch arm64 --vm-type=qemu
