--- a/dataSource/relational/src/main/resources/mysql-meta.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta.properties
@@ -75,6 +75,8 @@ not_regex_like_expression=%s NOT REGEXP %s
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
 
+support_boundary_query=true
+
 # 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
