--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -62,6 +62,8 @@ not_regex_like_expression=%s !~ %s
 jdbc_support_special_char=true
 # pg中public部分为非元数据（真实数据）部分
 schema_pattern=public
+# 是否支持 SQL2003 规定的 information_schema 视图
+support_boundary_query=true
 
 # Postgresql DataTypeTransformer
 # pg types 2 IGinX types
