--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -84,7 +84,7 @@ runs:
               echo "fastparquet" >> requirements.txt
               echo "tqdm" >> requirements.txt
               echo "requests" >> requirements.txt
-              echo "torch" >> requirements.txt
+              echo "torch==2.7.1" >> requirements.txt
               echo "transformers" >> requirements.txt
 
         - if: inputs.scope=='all' && inputs.iginx-conda-flag != 'true'
