perf(relational): split create and alter column

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -45,7 +45,7 @@ drop_database_statement=DROP SCHEMA %s CASCADE;
 query_user_privilege_statement=SELECT * FROM SESSION_PRIVS;
 
 # 创建表
-create_table_statement=CREATE TABLE IF NOT EXISTS %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+create_table_statement=CREATE TABLE IF NOT EXISTS %s (%s %s NOT NULL, %s, PRIMARY KEY(%s))
 
 drop_table_statement=DROP TABLE IF EXISTS %s
 
