--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -18,7 +18,7 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# 配置Dameng META以供JDBCMeta读取
+# 配置Oracle META以供JDBCMeta读取
 
 # 驱动类
 driver_class=oracle.jdbc.driver.OracleDriver
@@ -35,7 +35,7 @@ quote="
 support_create_database=false
 
 # 创建表
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s, PRIMARY KEY(%s))
 
 drop_table_statement=DROP TABLE IF EXISTS %s
 
