--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -33,7 +33,7 @@ drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
 # 创建数据库的SQL语句
 create_database_statement=CREATE DATABASE %s;
 # 创建表
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s, PRIMARY KEY(%s));
 # 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
 # 删除表字段
