feat(relational): support wide column

--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -90,6 +90,12 @@ jdbc_support_special_char=false
 
 jdbc_support_get_table_name_from_result_set=false
 
+# 单表最大列数
+max_column_num_limit=800
+
+# 单行最大字节数
+max_single_row_size_limit=18156
+
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
@@ -105,3 +111,11 @@ IGinX-FLOAT=FLOAT(12,6)
 IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=NUMBER(1)
 IGinX-LONG=NUMBER(19)
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=40
+IGinX-LONG.size=8
