--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -98,18 +98,37 @@ support_boolean_type=false
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
 
+# 单表最大列数
+max_column_num_limit=800
+
+# 单行最大字节数
+max_single_row_size_limit=8195
+
+BYTE=IGINX-BOOLEAN
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
-MEDIUMINT=IGinX-INTEGER
 INT=IGinX-INTEGER
-BIGINT=IGinX-LONG
+NUMERIC=IGinX-INTEGER
 INTEGER=IGinX-INTEGER
+BIGINT=IGinX-LONG
 FLOAT=IGinX-FLOAT
+REAL=IGinX-FLOAT
 DOUBLE=IGinX-DOUBLE
 DECIMAL=IGinX-DOUBLE
+DOUBLE\ PRECISION=IGinX-DOUBLE
+BIGDECIMAL=IGinX-DOUBLE
 
 IGinX-INTEGER=INTEGER
-IGinX-FLOAT=FLOAT(12,6)
-IGinX-DOUBLE=DOUBLE(22,11)
+IGinX-FLOAT=REAL
+IGinX-DOUBLE=DOUBLE
 IGinX-BOOLEAN=TINYINT
+IGinX-BINARY=CLOB
 IGinX-LONG=BIGINT
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=40
+IGinX-LONG.size=8
