--- a/dataSource/relational/src/main/resources/mysql-meta.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta.properties
@@ -74,6 +74,10 @@ regex_like_expression=%s REGEXP %s
 not_regex_like_expression=%s NOT REGEXP %s
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
+# 单表最大列数
+max_column_num_limit=800
+# 单行最大字节数
+max_single_row_size_limit=8156
 
 # 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
@@ -93,3 +97,11 @@ IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=TINYINT
 IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=12
+IGinX-LONG.size=8
