--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -62,6 +62,10 @@ not_regex_like_expression=%s !~ %s
 jdbc_support_special_char=true
 # pg中public部分为非元数据（真实数据）部分
 schema_pattern=public
+# 单表最大列数
+max_column_num_limit=800
+# 单行最大字节数
+max_single_row_size_limit=8192
 
 # Postgresql DataTypeTransformer
 # pg types 2 IGinX types
@@ -85,3 +89,11 @@ IGinX-DOUBLE=DOUBLE PRECISION
 IGinX-BOOLEAN=BOOLEAN
 IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
+
+# 每种数据类型的大小
+IGinX-INTEGER.size=4
+IGinX-FLOAT.size=4
+IGinX-DOUBLE.size=8
+IGinX-BOOLEAN.size=1
+IGinX-BINARY.size=18
+IGinX-LONG.size=8
