fix(relational): fix the full join of logical table and add dameng's type mapping

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -118,6 +118,7 @@ REAL=IGinX-FLOAT
 DOUBLE=IGinX-DOUBLE
 DOUBLE\ PRECISION=IGinX-DOUBLE
 BIG\ DECIMAL=IGinX-DOUBLE
+DECIMAL=IGinX-DOUBLE
 
 IGinX-INTEGER=INTEGER
 IGinX-FLOAT=REAL
