--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -72,6 +72,7 @@ jobs:
                   java: ${{ matrix.java }}
                   iginx-conda-flag: "true"
                   iginx-conda-env: "iginxEnv"
+                  start-single-iginx: "false"
 
             - name: Display System Info
               shell: bash
