Revert "Update action.yml"
This reverts commit 881d66cdf882d55a1424e5c8fd67509cee46ed6e.

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -96,7 +96,7 @@ runs:
           uses: actions/setup-python@v5
           with:
               python-version: ${{ inputs.python-version }}
-        #      cache: "pip" # caching pip dependencies
+              cache: "pip" # caching pip dependencies
 
         # when using login mode shell, setup-python does not take effect.
         # thus manually add python path to PATH
