test: improve config loading and exception handling in test (#646)
* Refactor config loading and update test workflow

* Update CI workflows and config loading logic

* Update action.yml

* Update action.yml

* Refactor env path handling and improve test assertions

* fix

* Update tests.yml

* Update action.yml

* debug

* Update unit-test.yml

* Revert "Update action.yml"

This reverts commit 881d66cdf882d55a1424e5c8fd67509cee46ed6e.

* Revert "fix"

This reverts commit 92dc8fab2ddc237e894e03a5219b992b310b9716.

* Update ThreadInterpreterManagerTest.java

* Update action.yml

* Revert "Update tests.yml"

This reverts commit efb7c4d285c137eb0e2c50a8e3e249afc5caa790.

* Update ThreadInterpreterManagerTest.java

---------

Co-authored-by: Yuqing Zhu <yuqing.zhu@139.com>

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -33,6 +33,10 @@ inputs:
     iginx-conda-env:
         description: "conda env name"
         required: false
+    start-single-iginx:
+        description: "is only one iginx started in this test"
+        required: false
+        default: "true"
 
 runs:
     using: "composite"
@@ -156,7 +160,11 @@ runs:
         - name: Set up environment variable
           shell: bash
           run: |
-              echo "VERSION=${{ steps.project.outputs.version }}" >> $GITHUB_ENV
+              VERSION=${{ steps.project.outputs.version }}
+              echo "VERSION=${VERSION}" >> $GITHUB_ENV
               PROJECT_ROOT=${{ steps.project.outputs.workspace }}
               echo "PROJECT_ROOT=${PROJECT_ROOT}" >> $GITHUB_ENV
               echo "SERVICE_DIR=${PROJECT_ROOT}/.github/actions/service" >> $GITHUB_ENV
+              if [ "${{ inputs.start-single-iginx }}" == "true" ]; then
+                  echo "IGINX_HOME=${PROJECT_ROOT}/core/target/iginx-core-${VERSION}" >> $GITHUB_ENV
+              fi
