fix(datasource): add oracle toEngineType into properties & recover singleton of oracle

--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -108,11 +108,12 @@ FLOAT=IGinX-FLOAT
 DOUBLE=IGinX-DOUBLE
 DECIMAL=IGinX-DOUBLE
 
-IGinX-INTEGER=INTEGER
-IGinX-FLOAT=FLOAT(12,6)
-IGinX-DOUBLE=DOUBLE(22,11)
 IGinX-BOOLEAN=NUMBER(1)
+IGinX-INTEGER=NUMBER(10)
 IGinX-LONG=NUMBER(19)
+IGinX-FLOAT=BINARY_FLOAT
+IGinX-DOUBLE=BINARY_DOUBLE
+IGinX-BINARY=VARCHAR2(4000)
 
 # 每种数据类型的大小
 IGinX-INTEGER.size=4
